# bmslogic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
bmslogic/: CMakeLists.txt  __init__.py  path_definations.py
bmslogic/calc_helpers/: CI_algorithms.py  CMakeLists.txt  binding_cpp_py.cpp  constants.h  constants.py  errors.py  hummingbird.h  kalman_filter.cpp  kalman_filter.h  kalman_filter.py  matrix_operations.py  numerical_diff.py  ode_solvers.py  owl.cpp  owl.h  utils.py
bmslogic/parameter_sets/application/EV/: EV_dataset.csv
bmslogic/parameter_sets/application/EV/reference/Porsche/: Taycan4S
bmslogic/parameter_sets/parameter_sets_ecm/test/: funcs.py  param.csv
bmslogic/parameter_sets/tesla_NCA_2170/: funcs.py  param_battery-cell.csv  param_electrolyte.csv  param_neg-electrode.csv  param_pos-electrode.csv
bmslogic/parameter_sets/test/: funcs.py  param_electrolyte.csv  references.txt
bmslogic/parameter_sets/test_single_particle_only/: funcs.py  param_neg-electrode.csv  param_pos-electrode.csv
bmslogic/simulations/: kalman_solvers.h
bmslogic/simulations/applications/: __init__.py  custom_exceptions_and_warnings.py  drivecycles.py  ev.py  external_conditions.py  sol.py
bmslogic/simulations/cell/: CMakeLists.txt  __init__.py  battery_components.cpp  battery_components.h  battery_components.py  bindings_cpp_py.cpp  common_includes.h  coords.cpp  coords.h  custom_warnings_exceptions.py  cyclers.cpp  cyclers.h  cyclers.py  definations.py  general_ocps.h  general_ocps.py  kalman_solvers.cpp  kalman_solvers.h  models.cpp  models.h  models.py  parameter_estimations.py  parameter_set_manager.cpp  parameter_set_manager.h  parameter_set_manager.py  plot.py  pycyclers.py  solution.cpp  solution.h  solution.py  solvers.cpp  solvers.h
bmslogic/simulations/cell/solvers/: battery.py  coords.py  degradation.py  ecm.py  electrode_conc.py  electrode_potential.py  electrolyte_conc.py  electrolyte_potential.py
bmslogic/simulations/pack/: real_time_sims.cpp  real_time_sims.h
cpp_tests/: CMakeLists.txt  example_parameters.cpp  test_battery_components.cpp  test_cyclers.cpp  test_kalman_filter.cpp  test_kalman_solvers.cpp  test_models.cpp  test_owl.cpp  test_solvers.cpp
examples/: CMakeLists.txt  plot.cpp
examples/calc_helpers/: sp_kalman_filter.py
examples/simulations/applications/EVs/: chevy.py  drivecycles.py  path_definations.py  porsche_US06.py  porsche_tesla_comparison.py  tesla_US06.py
examples/simulations/cell/: CMakeLists.txt  charge.py  charge_discharge.py  custom_cycler.py  discharge_1.cpp  discharge_1.py  discharge_2.py  discharge_espm_isothermal.py  discharge_espm_non_isothermal.py  discharge_rest.py  discharge_spm_CNSolver.py  discharge_spm_cpp_vs_python.py  discharge_spm_espm_isothermal.py  discharge_spm_isothermal_1.py  discharge_spm_non_isothermal.py  dst_cycles.py  example_parameter.py  hppc_discharge_spm_isothermal.py  hppc_espm_overpotential.py  hppc_spm_overpotential.py  hppc_steps.py  hppc_steps_overpotential.py
examples/simulations/cell/general_ocp_functions/: guo_ocp_negative_parameters  guo_ocp_positive_parameters.py  negative_electrodes.py  positive_electrodes.py
examples/simulations/cell/kalman_solvers/: elec_n_poly_solver.py  sp_isothermal_discharge.py
examples/simulations/cell/parameter_estimations/: stoic_limits_charge.py
examples/simulations/cell/parameter_estimations/data/: INR18650_slow_charge.csv  INR18650_slow_discharge.csv
examples/simulations/cell/pure_cpp/: CMakeLists.txt  charge_rest_spm  charge_rest_spm.cpp  charge_spm  charge_spm.cpp  discharge_espm.cpp  discharge_rest_spm  discharge_rest_spm.cpp  discharge_spm  discharge_spm.cpp  discharge_spm_cn_solver.cpp  example_parameters.cpp
examples/simulations/cell/pure_cpp/kalman_filter/: sp_isothermal_discharge.cpp
examples/simulations/cell/pure_cpp/solvers/: CMakeLists.txt  electrolyte_conc_fvm  electrolyte_conc_fvm.cpp  neg_charge_single_particle  neg_charge_single_particle.cpp  neg_discharge_rest_single_particle  neg_discharge_rest_single_particle.cpp  neg_discharge_single_particle  neg_discharge_single_particle.cpp  neg_electrode_conc_solvers.cpp  pos_charge_single_particle  pos_charge_single_particle.cpp  pos_discharge_single_particle  pos_discharge_single_particle.cpp
examples/simulations/cell/pure_python/full_simulation_runs/ecm/: LCO_discharge_esc.py  LCO_ocv_fit.py  discharge_esc.py
examples/simulations/cell/pure_python/full_simulation_runs/p2d/: discharge_ROMP2D_isothermal.py  plot_discharge_ROMP2D_isothermal.py
examples/simulations/cell/pure_python/full_simulation_runs/single_particle_model/: charge_espm_isothermal.py  charge_espm_non_isothermal.py  charge_isothermal.py  charge_isothermal_degradation.py  charge_rest_spm_isothermal.py  charge_spm_isothermal.py  charge_spm_non_isothermal.py  custom_cycler_isothermal.py  custom_cycler_isothermal_one_sec_sim.py  custom_cycler_isothermal_termination_criteria.py  discharge_espm_isothermal.py  discharge_espm_isothermal_overpotentials.py  discharge_espm_non_isothermal.py  discharge_isothermal.py  discharge_non_isothermal.py  discharge_rest_espm_isothermal.py  discharge_rest_isothermal.py  (+23 more)
examples/simulations/cell/pure_python/general_ocps/: negative_electrodes.py  positive_electrodes.py
examples/simulations/cell/pure_python/kalman_filter/: plot_sp_custom_cycler.py  plot_sp_custom_cycler_current.py  plot_sp_custom_cycler_soc_n.py  plot_sp_custom_cycler_voltage.py  plot_sp_soc_p.py  plot_zoomed_soc_n.py  plot_zoomed_soc_n_2.py  plot_zoomed_soc_p_2.py  plot_zoomed_sp_soc_p.py  sp_custom_cycler.py  sp_discharge.py
examples/simulations/cell/pure_python/solvers/: romsei.py
examples/simulations/cell/solvers/: CN_electrode_conc.py  cn_neg_discharge.py  fvm_electrolyte_solver.py  solver_romsei.py
examples/simulations/cell/solvers/electrode_conc/: cn_neg_discharge.py  cn_neg_discharge_diff_time.py  cn_pos_dicharge.py
examples/simulations/cell/tutorials/: tutorial1_battery_components.py
examples/simulations/pack/: CMakeLists.txt  multiple_timed_simulations.cpp  timed_simulation.cpp
(+1066 files in other folders)
